--- a/pytest.ini
+++ b/pytest.ini
@@ -1,13 +1,13 @@
 [pytest]
 addopts = -rf --cache-clear --cov
+norecursedirs = tmp* services/api/openapi .tox venv .github 
 python_files = test_*.py
 junit_family=xunit1
 log_level=INFO
 python_paths =
     venv
 testpaths =
-    drm_appointment/test
-
+    test
 ; Ignore warnings which are verbose and unrelated to Keras
 filterwarnings =
     ignore:np.asscalar:DeprecationWarning
