--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,3 @@
-AWS_ACCESS_KEY_ID=@@@AWS_ACCESS_KEY_ID@@@
-AWS_SECRET_ACCESS_KEY=@@@AWS_SECRET_ACCESS_KEY@@@
-AWS_DEFAULT_REGION=@@@AWS_DEFAULT_REGION@@@
-
-TOKEN_SECRET_KEY_NAME=@@@TOKEN_SECRET_KEY_NAME@@@
-STRING_TO_GET_FROM_SECRET_KEY=@@@STRING_TO_GET_FROM_SECRET_KEY@@@
-
-PYDEVD_WARN_EVALUATION_TIMEOUT=500
+# AWS CREDENTIALS TO ACESSE SECRET MANAGER
+AWS_ACCESS_KEY_ID=xxxxxxxxxxxxxxxx
+AWS_SECRET_ACCESS_KEY=xxxxxxxxxxxxxxxx
