feat: config aws ecr base image

--- a/.github/workflows/lint_with_flake8_and_unit_test.yml
+++ b/.github/workflows/lint_with_flake8_and_unit_test.yml
@@ -4,6 +4,7 @@ on:
     branches:
       - 'feature/**'
       - 'hotfix/**'    
+      - 'staging'    
   pull_request:
     branches: [ staging, production ]
 jobs:
